# opensuse-proxy-cache

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FreeBSD.conf  Makefile  README.md  cargo_config  make.sh
arc-disk-cache/: Cargo.toml  README.md
arc-disk-cache/src/: error.rs  lib.rs
http-client/src/: isahc.rs
memcached-server/: Cargo.toml
memcached-server/src/: codec.rs  main.rs  parser.rs
opensuse-proxy-cache/: Cargo.toml  Dockerfile  Dockerfile.fbsd  freebsd.repos
opensuse-proxy-cache/src/: arc_disk_cache.rs  auth.rs  backend.rs  cache.rs  config.rs  constants.rs  main-old.rs  main.rs  memcache.rs
opensuse-proxy-cache/templates/: ipxe.menu.html
redis-server/: Cargo.toml  Dockerfile
redis-server/src/: codec.rs  main.rs  parser.rs
src/: arc_disk_cache.rs  cache.rs  constants.rs  main.rs
