[package]
name = "opensuse-proxy-cache"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tide = "0.16"

tokio = { version = "1", features = ["full"] }
url = "2"
pin-project-lite = "0.2"
tempfile = "3.2"
concread = "^0.2.18"
sha2 = "0.9"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
httpdate = "1"
time = { version = "0.3", features = ["serde"]}
lazy_static = "1.4"

tide-openssl = "0.1.1"
structopt = { version = "0.3", default-features = false }
async-std = { version = "1.7", features = ["tokio1"] }

tracing-subscriber = "0.2"

# Breaks due to tokio mismatch.
# surf = { version = "2.3", default-features = false, features = ["hyper-client", "encoding", "middleware-logger"] }

# Breaks with HTTP version not supported.
# surf = { version = "2.3", default-features = false, features = ["h1-client", "encoding", "middleware-logger"] }

# Doesn't handle some(0) len case.
# surf = "2.3"
# [patch.crates-io]
# http-client = { git = "https://github.com/Fishrock123/http-client.git", branch = "fix-isahc-head-zero-size" }

# Works!
surf = "2.3"
[patch.crates-io]
http-client = { path = "./http-client" }
