


[profile.release]
debug = true
lto = "thin"

[workspace]
members = [
    "opensuse-proxy-cache"
]

[patch.crates-io]
http-client = { path = "./http-client" }

# concread = { path = "../kanidm/concread" }
concread = { git = "https://github.com/kanidm/concread.git" }

# tracing-forest = { path = "../tracing-forest/tracing-forest" }
tracing-forest = { git = "https://github.com/Firstyear/tracing-forest.git", rev = "eadd103f3a151a213e1e1632e21c87465f7e67ca" }


