[package]
name = "arc-disk-cache"
version = "0.1.0"
edition = "2021"

description = "Concurrently Readable Disk Cache"
repository = "https://github.com/Firstyear/opensuse-proxy-cache"
readme = "README.md"
keywords = ["concurrency", "lru", "mvcc", "copy-on-write", "transactional-memory"]
categories = ["data-structures", "memory-management", "caching", "concurrency"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concread = "^0.4.0"
# concread = { path = "/Users/william/development/kanidm/concread" }
# concread = { git = "https://github.com/kanidm/concread.git", rev = "34d2ba05090493ffbfbcd367af77eff9c9cf7d1f" }

tempfile = "3.2"
time = { version = "0.3", features = ["serde"]}
tracing = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crc32c = "0.6"
base64 = "0.13.0"
rand = "^0.8.5"


[dev-dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

