[package]
name = "arc-disk-cache"
version = "0.1.0"
edition = "2021"
description = "Concurrently Readable Disk Cache"
repository = "https://github.com/Firstyear/opensuse-proxy-cache"
readme = "README.md"
keywords = ["concurrency", "lru", "mvcc", "copy-on-write", "transactional-memory"]
categories = ["data-structures", "memory-management", "caching", "concurrency"]
license = "MPL-2.0"

[dependencies]
concread = "^0.5.0"
thiserror = "1.0"
tempfile = "3.10"
time = { version = "0.3", features = ["serde"]}
tracing = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crc32c = "0.6"
rand = "^0.8.5"
hex = "0.4"

sha2 = "0.10"

[dev-dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

