[package]
name = "opensuse-proxy-cache"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = 2

[features]
default = []
dhat-heap = [ "dhat" ]    # if you are doing heap profiling
dhat-ad-hoc = [ "dhat" ]  # if you are doing ad hoc profiling

[dependencies]
dhat = { version = "0.3", optional = true }

bytes = "1.2"
tide = "0.16"

tokio = { version = "1", features = ["full", "tracing"] }
url = "2"
pin-project-lite = "0.2"
tempfile = "3.2"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
httpdate = "1"
time = { version = "0.3", features = ["serde"]}
regex = "1"
lazy_static = "1.4"

# openssl-src = "300.0.11+3.0.7"
openssl = { version = "^0.10.45", features = [] }
# tide-openssl = "0.1.1"
tide-openssl = { git = "https://github.com/Firstyear/tide-openssl", branch = "20230130-update-openssl-params" }

structopt = { version = "0.3", default-features = false }
async-std = { version = "1.7", features = ["tokio1"] }

console-subscriber = "0.1.8"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest.git", features = ["smallvec", "tokio"] }
tracing-forest = { version = "0.1.4", features = ["smallvec", "tokio", "uuid"] }

arc-disk-cache = { path = "../arc-disk-cache" }

# Oauth
rand = "0.8"
async-trait = "0.1"
anyhow = "1"
chrono = "0.4"
oauth2 = { version = "4.0", default-features = false, features = ["reqwest", "native-tls"] }

lru = "0.8"

# Works!

surf = "2.3"
# Prevents a build error
http-types = "=2.11.0"

# Breaks due to tokio mismatch.
# surf = { version = "2.3", default-features = false, features = ["hyper-client", "encoding", "middleware-logger"] }

# Breaks with HTTP version not supported.
# surf = { version = "2.3", default-features = false, features = ["h1-client", "encoding", "middleware-logger"] }

# Doesn't handle some(0) len case.
# surf = "2.3"
# [patch.crates-io]
# http-client = { git = "https://github.com/Fishrock123/http-client.git", branch = "fix-isahc-head-zero-size" }

