[package]
name = "opensuse-proxy-cache"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = 2
lto = "thin"

[features]
default = []
dhat-heap = [ "dhat" ]    # if you are doing heap profiling
dhat-ad-hoc = [ "dhat" ]  # if you are doing ad hoc profiling

[dependencies]
dhat = { version = "0.3", optional = true }
clap = { version = "4.1", features = ["derive", "env"] }

bytes = "1.2"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1" }
url = "2"
mime = "0.3"
pin-project-lite = "0.2"
tempfile = "3.2"
# hex = "0.4"
serde = "1.0"
serde_json = "1.0"
# httpdate = "1"
time = { version = "0.3", features = ["serde"]}
regex = "1"
lazy_static = "1.4"

axum = { version = "0.6", features = [ "http1", "tokio" ] }
axum-server = { version = "0.5", features = ["tls-openssl"] }
openssl = "0.10"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
reqwest = { version = "0.11", features = ["stream", "native-tls"] }


console-subscriber = "0.1.8"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1.6", features = ["smallvec", "tokio", "uuid"] }

arc-disk-cache = { path = "../arc-disk-cache" }

# Oauth
# rand = "0.8"
# async-trait = "0.1"
# anyhow = "1"
# chrono = "0.4"
# oauth2 = { version = "4.0", default-features = false, features = ["reqwest", "native-tls"] }

lru = "0.8"

