[package]
name = "opensuse-proxy-cache"
version = "0.1.0"
edition = "2018"

[features]
default = []
dhat-heap = [ "dhat" ]    # if you are doing heap profiling
dhat-ad-hoc = [ "dhat" ]  # if you are doing ad hoc profiling

[dependencies]

# rypper_reader = { path = "/Users/william/development/rypper/rypper-reader" }
# rypper_reader = { git = "https://codeberg.org/Rusty-Geckos/rypper.git" }

askama = "0.12.1"
async-tftp = "0.3"
bloomfilter = "1.0"
dhat = { version = "0.3", optional = true }
# Locked to .52 on arm?
clap = { version = "=4.5.52", features = ["derive", "env"] }

bytes = "1.6"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1" }
url = "2"
mime = "0.3"
pin-project-lite = "0.2"
tempfile = "3.10"
# hex = "0.4"
serde = "1.0"
serde_json = "1.0"
# httpdate = "1"
time = { version = "0.3", features = ["serde"]}
regex = "1"
lazy_static = "1.4"

# For GEOIP
maxminddb = "0.26.0"

axum = { version = "0.8", features = [ "http1", "tokio", "macros" ] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
hyper = { version = "1.8", default-features = false, features = [] }
tower = { version = "0.5", features = ["make"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots"] }


console-subscriber = "0.2.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-forest = { version = "0.1.6", features = ["smallvec", "tokio", "uuid"] }

arc-disk-cache = { path = "../arc-disk-cache" }

# Oauth
# rand = "0.8"
# async-trait = "0.1"
# anyhow = "1"
# chrono = "0.4"
# oauth2 = { version = "4.0", default-features = false, features = ["reqwest", "native-tls"] }

lru = "0.12"

