[package]
name = "redis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.6", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
nom = "7.1.0"
bytes = "1"

tracing-forest = { version = "0.1", features = ["uuid", "smallvec", "sync", "attributes", "env-filter"] }
structopt = { version = "0.3", default-features = false }
futures = "0.3"

[dev-dependencies]
redis = "0.15.0"

tracing-subscriber = "0.3"

